--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,48 @@
+/*@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300);*/
+
+html{
+    height: 100%;
+    width: 100%;
+    font-family: "Open Sans Light", sans-serif;
+}
+
+
+body{
+    margin-left: -3px;
+    margin-top: -5px;
+    margin-bottom: -2px;
+    padding: 0;
+    min-height: 100%;
+    width: 100%;
+}
+
 .clickspot{
 	text-decoration:underline;
 	color:blue;
 	cursor:pointer
 }
 .status{
-	background-color:Yellow
+	background-color:white
 }
 .error{
 	color:Red;
-	background-color:Yellow
+	background-color:blue
 }
 
 .menuitem {
-	text-decoration:underline;
-	color:blue;
-	cursor:hand
+	text-decoration:none;
+	background-color:green;
+    color:#fff;
+	cursor:hand;
+    border: 1px solid none;
+    width: 80px;
+    border-radius: 1px;
+    margin: 0 auto;
+    margin-left: 10px;
+    padding: 10px
+
 }
+
 .menuitem:hover{
 	text-decoration:underline;
 	cursor:hand;
@@ -26,20 +53,22 @@
 #pageheader
 {
     height: 1in;
-    background-color: #FFCC66;
+    background-color: green;
     font-size: large;
     text-align: center;
 }
 
 #mainnav{
+	
 	width:2in;
 	vertical-align:top
 }
 
 
 #content {
-	width:10in;
-	vertical-align:top
+	width:11.85in;
+    margin-left: 500px;
+	vertical-align:top;
 	
 }
 
@@ -51,9 +80,9 @@
 
 .reportTable .header
 {
-    background-color: #CC6600;
+    background-color: green;
     text-transform: uppercase;
-    color: White;
+    color: black;
 }
 
 .reportTable .row1
@@ -63,12 +92,12 @@
 
 .reportTable .row2
 {
-    background-color:White;
+    background-color:#FFE0B3;
 }
 
 .reportTable tr:hover
 {
-    background-color:Yellow
+    background-color: lightgray;
 }
 
 .tableForm .label
@@ -110,4 +139,73 @@
     position: absolute;
     display:none;
     width: auto;
+}
+
+table.container {
+   width: 100%;
+    min-height: 100%;
+}
+
+#sidemenu {
+    background-color: #272727;
+    color: aliceblue;
+    vertical-align: top;
+    z-index: 999;
+    padding: 0px;
+    margin-top: -20px;
+    padding-top:60px;
+    cursor: hand;
+    width: 12%;
+    min-width: 150px;
+    height: 100%;
+    border: 1px solid none;
+}
+
+.sideMenuItem {
+    text-align: center;
+    border: 1px solid none;
+    text-decoration-color: #fff;
+    padding: 10px 0px 10px 0px;
+}
+.sideMenuItem i{
+    font-size: 1.6em;
+}
+
+.sideMenuItem:hover{
+   color:#F37520;
+   border-right: 3px solid #F37520;
+    transition:color 0.5s ease;
+    -o-transition:color 0.5s ease;
+    -webkit-transition:color 0.5s ease;
+    -moz-transition:color 0.5s ease;
+    transition:border-right 0.5s ease;
+    -o-transition:border-right 0.5s ease;
+    -webkit-transition:border-right 0.5s ease;
+    -moz-transition:border-right 0.5s ease;
+
+}
+
+.sideMenuItem:before{
+   color:#F37520;
+   border-right: 3px solid #F37520;
+    transition:color 0.5s ease-out;
+    -o-transition:color 0.5s ease-out;
+    -webkit-transition:color 0.5s ease-out;
+    -moz-transition:color 0.5s ease-out;
+    transition:border-right 0.5s ease-out;
+    -o-transition:border-right 0.5s ease-out;
+    -webkit-transition:border-right 0.5s ease-out;
+    -moz-transition:border-right 0.5s ease-out;
+
+}
+
+
+
+
+#divPageMenu {
+    margin-top: 10px;
+    padding-top: 10px;
+    margin-bottom: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
