--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,21 @@
+/*@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300);*/
+
+html{
+    height: 100%;
+    width: 100%;
+    font-family: "Open Sans Light", sans-serif;
+}
+
+
+body{
+    margin-left: -3px;
+    margin-top: -5px;
+    margin-bottom: -2px;
+    padding: 0;
+    min-height: 100%;
+    width: 100%;
+}
+
 .clickspot{
 	text-decoration:underline;
 	color:blue;
@@ -12,9 +30,18 @@
 }
 
 .menuitem {
-	text-decoration:underline;
-	color:blue;
-	cursor:hand
+	text-decoration:none;
+	background-color:#f37520;
+    color:#fff;
+	cursor:hand;
+    border: 1px solid none;
+    width: 80px;
+    border-radius: 1px;
+    margin: 0 auto;
+    margin-left: 10px;
+    padding: 10px
+
+
 }
 .menuitem:hover{
 	text-decoration:underline;
@@ -38,8 +65,9 @@
 
 
 #content {
-	width:10in;
-	vertical-align:top
+	width:11.85in;
+    margin-left: 500px;
+	vertical-align:top;
 	
 }
 
@@ -110,4 +138,73 @@
     position: absolute;
     display:none;
     width: auto;
+}
+
+table.container {
+   width: 100%;
+    min-height: 100%;
+}
+
+#sidemenu {
+    background-color: #272727;
+    color: aliceblue;
+    vertical-align: top;
+    z-index: 999;
+    padding: 0px;
+    margin-top: -20px;
+    padding-top:60px;
+    cursor: hand;
+    width: 12%;
+    min-width: 150px;
+    height: 100%;
+    border: 1px solid none;
+}
+
+.sideMenuItem {
+    text-align: center;
+    border: 1px solid none;
+    text-decoration-color: #fff;
+    padding: 10px 0px 10px 0px;
+}
+.sideMenuItem i{
+    font-size: 1.6em;
+}
+
+.sideMenuItem:hover{
+   color:#F37520;
+   border-right: 3px solid #F37520;
+    transition:color 0.5s ease;
+    -o-transition:color 0.5s ease;
+    -webkit-transition:color 0.5s ease;
+    -moz-transition:color 0.5s ease;
+    transition:border-right 0.5s ease;
+    -o-transition:border-right 0.5s ease;
+    -webkit-transition:border-right 0.5s ease;
+    -moz-transition:border-right 0.5s ease;
+
+}
+
+.sideMenuItem:before{
+   color:#F37520;
+   border-right: 3px solid #F37520;
+    transition:color 0.5s ease-out;
+    -o-transition:color 0.5s ease-out;
+    -webkit-transition:color 0.5s ease-out;
+    -moz-transition:color 0.5s ease-out;
+    transition:border-right 0.5s ease-out;
+    -o-transition:border-right 0.5s ease-out;
+    -webkit-transition:border-right 0.5s ease-out;
+    -moz-transition:border-right 0.5s ease-out;
+
+}
+
+
+
+
+#divPageMenu {
+    margin-top: 10px;
+    padding-top: 10px;
+    margin-bottom: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
